sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__unordered-materialized-cte-max-bytecode.snap
---
source: indexes.sqltest
expression: |-
  WITH prices(price) AS MATERIALIZED (
          SELECT price FROM products
      )
      SELECT MAX(price) FROM prices;
info:
  statement_type: WITH (CTE)
  tables:
  - prices
  - products
  setup_blocks:
  - unordered_materialized_prices
  database: ':memory:'
---
QUERY PLAN
|--SCAN products
`--SCAN prices

BYTECODE
addr  opcode          p1  p2  p3  p4           p5  comment
   0  Init             0  21   0                0  Start at 21
   1  Once            11   0   0                0  goto 11
   2  OpenEphemeral    0   1   0                0  cursor=0 is_table=true
   3  OpenRead         1   2   0  k(2,B)        0  table=products, root=2, iDb=0
   4  Rewind           1  11   0                0  Rewind table products
   5    Column         1   0   2                0  r[2]=products.price
   6    RealAffinity   2   0   0                0
   7    MakeRecord     2   1   3                0  r[3]=mkrec(r[2..2]); for
   8    NewRowid       0   4   0                0  r[4]=rowid
   9    Insert         0   3   4                4  intkey=r[4] data=r[3]
  10  Next             1   5   0                1
  11  Null             0   6   0                0  r[6]=NULL
  12  Rewind           0  17   0                0  Rewind  ephemeral()
  13    Column         0   0   1                0  r[1]=ephemeral().price
  14    Copy           1   7   0                0  r[7]=r[1]
  15    AggStep        0   7   6  max(Binary)   0  accum=r[6] step(r[7])
  16  Next             0  13   0                0
  17  AggFinal         0   6   0  max           0  accum=r[6]
  18  Copy             6   5   0                0  r[5]=r[6]
  19  ResultRow        5   1   0                0  output=r[5]
  20  Halt             0   0   0                0
  21  Transaction      0   1   1                0  iDb=0 tx_mode=Read
  22  Goto             0   1   0                0
